fix journal version (ad)

--- a/JASA/a.bib
+++ b/JASA/a.bib
@@ -35,7 +35,7 @@
 @inproceedings{ILFRM, crossref = {miller2009nonparametric} }
 @inproceedings{miller2009nonparametric,
   title={Nonparametric latent feature models for link prediction},
-  author={Miller, Kurt and Jordan, Michael I and Griffiths, Thomas L},
+  author={Miller, Kurt and Jordan, Michael I. and Griffiths, Thomas L.},
   booktitle={Advances in Neural Information Processing Systems},
   pages={1276--1284},
   year={2009}
@@ -44,12 +44,11 @@
 @article{IBP, crossref = {griffiths2011indian} }
 @article{griffiths2011indian,
   title={The indian buffet process: An introduction and review},
-  author={Griffiths, Thomas L and Ghahramani, Zoubin},
+  author={Griffiths, Thomas L. and Ghahramani, Zoubin},
   journal={The Journal of Machine Learning Research},
   volume={12},
   pages={1185--1224},
   year={2011},
-  publisher={JMLR. org}
 }
 
 @inproceedings{gorur06,
@@ -58,7 +57,6 @@
   booktitle={Proceedings of the 23rd International Conference on Machine learning},
   pages={361--368},
   year={2006},
-  organization={ACM}
 }
 
 @inproceedings{lahiri2007structure,
@@ -67,7 +65,6 @@
   booktitle={Computational Intelligence and Data Mining, 2007. CIDM 2007. IEEE Symposium on},
   pages={35--42},
   year={2007},
-  organization={IEEE}
 }
 @article{jordan2010bayesian,
     title={Bayesian nonparametric learning: Expressive priors for intelligent systems},
@@ -90,7 +87,7 @@
 }
 @article{HDP, crossref = {teh2006hierarchical} }
 @article{teh2006hierarchical,
-    author = {Yee Whye Teh and Michael I Jordan and Matthew J Beal and David M Blei},
+    author = {Yee W. Teh and Michael I. Jordan and Matthew J. Beal and David M. Blei},
     title = {Hierarchical {D}irichlet {P}rocesses},
     journal = {Journal of the American Statistical Association},
     volume = {101},
@@ -101,7 +98,7 @@
 
 @article{goldenberg2010survey,
     title={A survey of statistical network models},
-    author={Goldenberg, Anna and Zheng, Alice X and Fienberg, Stephen E and Airoldi, Edoardo M},
+    author={Goldenberg, Anna and Zheng, Alice X. and Fienberg, Stephen E. and Airoldi, Edoardo M.},
     journal={Foundations and Trends{\textregistered} in Machine Learning},
     volume={2},
     number={2},
@@ -112,7 +109,7 @@
 @INPROCEEDINGS{IRM, crossref = {kemp2006learning} }
 @inproceedings{kemp2006learning,
     title={Learning systems of concepts with an infinite relational model},
-    author={Kemp, Charles and Tenenbaum, Joshua B and Griffiths, Thomas L and Yamada, Takeshi and Ueda, Naonori},
+    author={Kemp, Charles and Tenenbaum, Joshua B. and Griffiths, Thomas L. and Yamada, Takeshi and Ueda, Naonori},
     booktitle={AAAI},
     volume={3},
     pages={5},
@@ -128,7 +125,7 @@
 @inproceedings{MMSB, crossref = {airoldi2009mixed} }
 @inproceedings{airoldi2009mixed,
   title={Mixed membership stochastic blockmodels},
-  author={Airoldi, Edoardo M and Blei, David M and Fienberg, Stephen E and Xing, Eric P},
+  author={Airoldi, Edoardo M. and Blei, David M. and Fienberg, Stephen E. and Xing, Eric P.},
   booktitle={Advances in Neural Information Processing Systems},
   pages={33--40},
   year={2009}
@@ -141,7 +138,6 @@
   booktitle={Machine Learning for Signal Processing (MLSP), 2011 IEEE International Workshop on},
   pages={1--6},
   year={2011},
-  organization={IEEE}
 }
 @INPROCEEDINGS{iMMSB, crossref = {koutsourelakis2008finding} }
 @inproceedings{koutsourelakis2008finding,
@@ -196,9 +192,6 @@ publisher={JSTOR}
     year      = {2005},
     url       = {http://dx.doi.org/10.1007/11752790_1},
     doi       = {10.1007/11752790_1},
-    timestamp = {Tue, 30 May 2006 13:27:54 +0200},
-    biburl    = {http://dblp.uni-trier.de/rec/bib/conf/slsfs/BuntineJ05},
-    bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 
@@ -209,7 +202,6 @@ publisher={JSTOR}
     series = {KDD '08},
     year = {2008},
     pages = {462--470},
-    publisher = {ACM},
 } 
 @proceedings{DBLP:conf/kdd/2008,
   editor    = {Ying Li and
@@ -218,12 +210,8 @@ publisher={JSTOR}
   title     = {Proceedings of the 14th {ACM} {SIGKDD} International Conference on
                Knowledge Discovery and Data Mining, Las Vegas, Nevada, USA, August
                24-27, 2008},
-  publisher = {{ACM}},
   year      = {2008},
   isbn      = {978-1-60558-193-4},
-  timestamp = {Mon, 14 May 2012 09:20:40 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/kdd/2008},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 
@@ -235,6 +223,18 @@ publisher={JSTOR}
  publisher = {Oxford University Press, Inc.},
  address = {New York, NY, USA},
 } 
+
+@article{newman2001scientific,
+    title={Scientific collaboration networks. {II}. Shortest paths, weighted networks, and centrality},
+    author={Newman, Mark EJ},
+    journal={Physical review E},
+    volume={64},
+    number={1},
+    pages={016132},
+    year={2001},
+    publisher={APS}
+}
+
  
 @book{Barabasi2003,
   author    = {Albert{-}L{\'{a}}szl{\'{o}} Barab{\'{a}}si},
@@ -333,7 +333,6 @@ publisher={JSTOR}
     booktitle={European Conference on Information Retrieval},
     pages={150--161},
     year={2008},
-    organization={Springer}
 }
 
 @inproceedings{clinchant2010information,
@@ -347,16 +346,24 @@ publisher={JSTOR}
 @article{AMMSB, crossref = {gopalan2013efficient} }
 @article{gopalan2013efficient,
     title={Efficient discovery of overlapping communities in massive networks},
-    author={Gopalan, Prem K and Blei, David M},
+    author={Gopalan, Prem K. and Blei, David M.},
     journal={Proceedings of the National Academy of Sciences},
     volume={110},
     number={36},
     pages={14534--14539},
     year={2013},
 }
+@inproceedings{kim2013efficient,
+    title={Efficient online inference for bayesian nonparametric relational models},
+    author={Kim, Dae Il and Gopalan, Prem K. and Blei, David and Sudderth, Erik},
+    booktitle={Advances in Neural Information Processing Systems},
+    pages={962--970},
+    year={2013}
+}
+
 @book{airoldi2014handbook,
     title={Handbook of Mixed Membership Models and Their Applications},
-    author={Airoldi, Edoardo M and Blei, David and Erosheva, Elena A and Fienberg, Stephen E},
+    author={Airoldi, Edoardo M. and Blei, David and Erosheva, Elena A. and Fienberg, Stephen E.},
     year={2014},
     publisher={CRC Press}
 }
@@ -399,7 +406,6 @@ publisher={JSTOR}
     booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
     pages={437--452},
     year={2011},
-    organization={Springer}
 }
 @article{orbanz2015bayesian,
     title={Bayesian models of graphs, arrays and other exchangeable random structures},
@@ -409,7 +415,6 @@ publisher={JSTOR}
     number={2},
     pages={437--461},
     year={2015},
-    publisher={IEEE}
 }
 
 @article{diaconis1979conjugate,
@@ -430,7 +435,6 @@ publisher={JSTOR}
     number={4},
     pages={661--703},
     year={2009},
-    publisher={SIAM}
 }
 
 @article{watts1998collective,
@@ -468,7 +472,7 @@ publisher={JSTOR}
 }        
 @article{jacobs2014unified,
     title={A unified view of generative models for networks: models, methods, opportunities, and challenges},
-    author={Jacobs, Abigail Z and Clauset, Aaron},
+    author={Jacobs, Abigail Z. and Clauset, Aaron},
     journal={arXiv preprint arXiv:1411.4070},
     year={2014}
 }
@@ -535,7 +539,6 @@ publisher={JSTOR}
   booktitle={Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
   pages={1007--1015},
   year={2013},
-  organization={ACM}
 }
 @article{Largeron2017,
   author = {C. Largeron and P. N. Mougel and O.  Benyahia and O. R. Zaïane},
@@ -585,17 +588,18 @@ publisher={JSTOR}
     pages={27--34},
     year={2009},
 }
-@inproceedings{teh2006collapsed,
-    title={A collapsed variational Bayesian inference algorithm for latent Dirichlet allocation},
-    author={Teh, Yee Whye and Newman, David and Welling, Max},
-    booktitle={NIPS},
-    volume={6},
-    pages={1378--1385},
-    year={2006}
+@inproceedings{teh2007collapsed,
+title={A collapsed variational Bayesian inference algorithm for latent Dirichlet allocation},
+author={Teh, Yee W. and Newman, David and Welling, Max},
+booktitle={Advances in Neural Information Processing Systems},
+pages={1353--1360},
+year={2007}
 }
+
+
 @article{hoffman2013stochastic,
     title={Stochastic variational inference.},
-    author={Hoffman, Matthew D and Blei, David M and Wang, Chong and Paisley, John William},
+    author={Hoffman, Matthew D. and Blei, David M. and Wang, Chong and Paisley, John William},
     journal={Journal of Machine Learning Research},
     pages={1303--1347},
     year={2013}
@@ -603,10 +607,9 @@ publisher={JSTOR}
 @inproceedings{foulds2013stochastic,
     title={Stochastic collapsed variational Bayesian inference for latent Dirichlet allocation},
     author={Foulds, James and Boyles, Levi and DuBois, Christopher and Smyth, Padhraic and Welling, Max},
-    booktitle={Proceedings of the 19th ACM SIGKDD international conference on Knowledge discovery and data mining},
+    booktitle={Proceedings of the 19th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
     pages={446--454},
     year={2013},
-    organization={ACM}
 }
 @article{cappe2009line,
     title={On-line expectation--maximization algorithm for latent data models},
@@ -624,4 +627,67 @@ publisher={JSTOR}
     year={2011},
     publisher={Elsevier}
 }
+@article{robbins1951stochastic,
+    title={A stochastic approximation method},
+    author={Robbins, Herbert and Monro, Sutton},
+    journal={The annals of mathematical statistics},
+    pages={400--407},
+    year={1951},
+    publisher={JSTOR}
+}
+@article{zhou2015negative,
+  title={Negative binomial process count and mixture modeling},
+  author={Zhou, Mingyuan and Carin, Lawrence},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={37},
+  number={2},
+  pages={307--320},
+  year={2015},
+}
+@inproceedings{zhou2012augment,
+    title={Augment-and-conquer negative binomial processes},
+    author={Zhou, Mingyuan and Carin, Lawrence},
+    booktitle={Advances in Neural Information Processing Systems},
+    pages={2546--2554},
+    year={2012}
+}
+
+@article{zhou2012beta,
+  title={Beta-negative binomial process and Poisson factor analysis},
+  author={Zhou, Mingyuan and Hannah, Lauren A. and Dunson, David B. and Carin, Lawrence},
+  journal={Journal of Machine Learning Research},
+  year={2012}
+}
+
+@article{aicher2014learning,
+  title={Learning latent block structure in weighted networks},
+  author={Aicher, Christopher and Jacobs, Abigail Z and Clauset, Aaron},
+  journal={Journal of Complex Networks},
+  volume={3},
+  number={2},
+  pages={221--248},
+  year={2014},
+  publisher={Oxford University Press}
+}
+@article{peixoto2018nonparametric,
+  title={Nonparametric weighted stochastic block models},
+  author={Peixoto, Tiago P.},
+  journal={Physical Review E},
+  volume={97},
+  number={1},
+  pages={012306},
+  year={2018},
+  publisher={APS}
+}
+
+@article{peixoto_graph-tool_2014,
+    title = {The graph-tool python library},
+    url = {http://figshare.com/articles/graph_tool/1164194},
+    doi = {10.6084/m9.figshare.1164194},
+    urldate = {2014-09-10},
+    journal = {figshare},
+    author = {Peixoto, Tiago P.},
+    year = {2014},
+    keywords = {all, complex networks, graph, network, other}}
+
 
