--- a/JASA/img/burst_mmsb.tex
+++ b/JASA/img/burst_mmsb.tex
@@ -1,4 +1,6 @@
 
+% pmk PNAS3 -x prop2_process_local_me 85 95 -m immsb_cgs -c generator7 manufacturing
+
 \begin{subfigure}
      \centering
          \includegraphics[width=0.45\textwidth]{img/burst/3_prop2_process_local_me__85}
