--- a/JASA/table/preferential_attachment.tex
+++ b/JASA/table/preferential_attachment.tex
@@ -1,5 +1,5 @@
 \begin{table}[th]
-\caption{Preferential attachment measures for training datasets and networks generated with fitted models.}
+\caption{Preferential attachment measures for training datasets (first row group) and networks generated with fitted models (second row group for \imb and third row group for \ifm. For the local preferential attachment, the mean and standard deviation values of the latent classes are reported.}
 \centering
 \begin{tabular}{lrrrr}
   \multirow{2}{*}{\textbf{Training Datasets}}  &
