--- a/JASA/img/0201/mg_deg.tex
+++ b/JASA/img/0201/mg_deg.tex
@@ -3,7 +3,7 @@
 %  [global immsb] [global ilfm]
 %  [local ilfm] [gloal ilfm]
 %
-% pmk PNAS3 -x gennetwork burstiness -g -c BA -n 200 --epoch 100
+% pmk PNAS3 -x gennetwork burstiness -g -c generator7 -n 1000 --epoch 100
 
 
 \begin{figure}[h]
