--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -1,5 +1,6 @@
 %%&latex
-\documentclass[12pt]{article}
+%\documentclass[12pt]{article}
+\documentclass[numbib]{imaiai}
 \usepackage{graphicx,psfrag,epsf}
 \usepackage{graphicx}
 \usepackage{natbib}
@@ -8,14 +9,19 @@
 % NOTE: To produce blinded version, replace "0" with "1" below.
 \newcommand{\blind}{0}
 
-\setlength{\textheight}{24 cm}
-
-% DON'T change margins - should be 1 inch all around.
-\addtolength{\oddsidemargin}{-.5in}%
-\addtolength{\evensidemargin}{-.5in}%
-\addtolength{\textwidth}{1in}%
-\addtolength{\textheight}{-.3in}%
-\addtolength{\topmargin}{-.8in}%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% DIMENSION/IEETRAN
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\setlength{\textheight}{24 cm}
+%
+%% for IEEE tran ?!
+%% DON'T change margins - should be 1 inch all around.
+%\addtolength{\oddsidemargin}{-.5in}%
+%\addtolength{\evensidemargin}{-.5in}%
+%\addtolength{\textwidth}{1in}%
+%\addtolength{\textheight}{-.3in}%
+%\addtolength{\topmargin}{-.8in}%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
@@ -69,86 +75,101 @@
 \newcommand{\me}{\mathcal{M}_e}
 \newcommand{\M}{\mathcal{M}}
 
-\newtheorem{definition}{Definition}[section]
-\newtheorem{lemma}{Lemma}[section]
-\newtheorem{proposition}{Proposition}[section]
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{corollary}{Corollary}[section]
-\newtheorem{proof}{Proof}[section]
+%\newtheorem{definition}{Definition}[section]
+%\newtheorem{lemma}{Lemma}[section]
+%\newtheorem{proposition}{Proposition}[section]
+%\newtheorem{theorem}{Theorem}[section]
+%\newtheorem{corollary}{Corollary}[section]
+%\newtheorem{proof}{Proof}[section]
 
 
 
 \begin{document}
 
-\def\spacingset#1{\renewcommand{\baselinestretch}%
-{#1}\small\normalsize} \spacingset{1}
+%\def\spacingset#1{\renewcommand{\baselinestretch}%
+%{#1}\small\normalsize} \spacingset{1}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\if1\blind
-{
-  \title{\bf Stochastic Mixed Membership Models and Preferential Attachment in Social Networks}
-  \author{Author 1\thanks{
-    The authors gratefully acknowledge \textit{please remember to list all relevant funding sources in the unblinded version}}\hspace{.2cm}\\
-    Department of YYY, University of XXX\\
-    and \\
-    Author 2 \\
-    Department of ZZZ, University of WWW}
-  \maketitle
-} \fi
+%\if1\blind
+%{
+%  \title{\bf Stochastic Mixed Membership Models and Preferential Attachment in Social Networks}
+%    \author{{%%%% First author details
+%    \sc Insert First author name}$^*$,\\[2pt]
+%    Insert First author address\\
+%    $^*${\email{Corresponding author: Insert corresponding author email here}}\\[2pt]
+%    %%%%%%% Second author details
+%    {\sc Insert Second author name}\\[2pt]
+%    Insert second author address\\
+%    {Second author email}\\[6pt]
+%    %%%%%%%
+%    {\sc and}\\[6pt]
+%    %%%%%%% Third author details
+%    {\sc Insert third author} \\[2pt]
+%    Third author address\\
+%    {Third author email address}}
+%    \maketitle
+%} \fi
+%
+%\if0\blind
+%{
+%  \title{\bf Stochastic Mixed Membership Models and Preferential Attachment in Social Networks}
+%%  \bigskip
+%%  \bigskip
+%%  \bigskip
+%%  \begin{center}
+%%    {\LARGE\bf Stochastic mixed membership models and preferential attachment in social networks}
+%%\end{center}
+%%  \medskip
+%    \maketitle
+%} \fi
 
-\if0\blind
-{
-  \title{\bf Stochastic Mixed Membership Models and Preferential Attachment in Social Networks}
-%  \bigskip
-%  \bigskip
-%  \bigskip
-%  \begin{center}
-%    {\LARGE\bf Stochastic mixed membership models and preferential attachment in social networks}
-%\end{center}
-%  \medskip
- \maketitle
-} \fi
+\title{Stochastic Mixed Membership Models and Preferential Attachment in Social Networks}
 
-\bigskip
+\author{{%%%% First author details
+\sc Insert First author name}$^*$,\\[2pt]
+Insert First author address\\
+$^*${\email{Corresponding author: Insert corresponding author email here}}\\[2pt]
+%%%%%%% Second author details
+{\sc Insert Second author name}\\[2pt]
+Insert second author address\\
+{Second author email}\\[6pt]
+%%%%%%%
+{\sc and}\\[6pt]
+%%%%%%% Third author details
+{\sc Insert third author} \\[2pt]
+Third author address\\
+{Third author email address}}
+
+\maketitle
+
+
+%\bigskip
+
 \begin{abstract}
-We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle preferential attachment. Preferential attachment charaterizes the propensity of users, in a given social network, to connect to users who have already a lot of connections. Preferential attachement can be global, in which case nodes are connected across communities, and/or local to the network communities. We first introduce in this study formal definitions for both global and local preferential attachement, in different settings, prior to study how standard stochastic mixed membership models behave. Our theoretical analysis reveals that these models do not comply with global preferential attachment, whereas their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on both synthetic and real networks.
+{We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle preferential attachment. Preferential attachment charaterizes the propensity of users, in a given social network, to connect to users who have already a lot of connections. Preferential attachement can be global, in which case nodes are connected across communities, and/or local to the network communities. We first introduce in this study formal definitions for both global and local preferential attachement, in different settings, prior to study how standard stochastic mixed membership models behave. Our theoretical analysis reveals that these models do not comply with global preferential attachment, whereas their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on both synthetic and real networks.}
+{bayesian model, social networks, preferential attachment.}
+\\
+
 \end{abstract}
 
 %\noindent%
 %{\it Keywords:} mixed membership models, social networks, preferential attachment.
 %\vfill
 
-%\newpage
-\spacingset{1.45} % DON'T change the spacing!
+% IEETRAN
+%\spacingset{1.45} % DON'T change the spacing!
 
 \input{content/intro}
+\input{content/related}
 \input{content/models}
 %\input{content/inference_context_v2}
 \input{content/preferential_v2}
 \input{content/illustration_v2}
-
-\section{Related Work}
-\label{sec:rel-work}
-
-Recently,  the class of stochastic mixed membership models has been successfully used for link prediction and structure discovery in social networks. For example, in \cite{AMMSB}, the authors  propose an adaptation of mixed-membership stochastic block model (MMSB) called a-MMSB, where "a" stands for assortative, and use it for discovering overlapping communities in large networks having millions of nodes. The weight matrix is constrained to have a fixed small value outside its diagonal. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. The latent feature model (LFM) has also been extended in several ways, to handle non-negative weights in \cite{IMRM} and with a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of the networks remains to be explored, as mentioned in \cite{jacobs2014unified}.
-
-In this article, we focus on \textit{preferential attachment}, a well known property of social networks \cite{Newman2010, Barabasi2003}. This property has been emphasized in previous studies, for example for modeling and generating artificial networks reflecting properties of real networks, as in the model by Barab\`asi-Albert \cite{albert2002statistical}, the model by Buckley and Osthus \cite{Buckley2001}, which integrate a preferential attachment mechanism, or in the Dancer model for generating dynamic attributed networks with community structures \cite{Largeron2017}. Preferential attachment has also  been exploited for improving the results obtained in classical tasks such as community detection \cite{Ciglan2013} or link prediction \cite{Zeng2016}.
-
-That said, few theoretical works have been conducted to study to what extent stochastic models comply with this property. 
-Orbanz and Roy  pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks and are thus less compatible with power law degree distributions \cite{orbanz2015bayesian}. Consequently, Lee \textit{et al.}  proposed a random network model in order to capture the power law typical of the degree distribution in social networks \cite{Lee2015}. However the model remains challenging to use in practice, especially for link prediction, due to the relaxation of the exchangeability assumption.~\\
-
-% Concerning the homophily effect, \cite{hoff2008modeling} pointed out that the latent eigen model (called MLFM, an extension of LFM) can comply with both homophily and stochastic equivalence in undirected graphs but without providing a formal definitions of these properties. Furthermore, Li \textit{et al.}, suggest that the latent eigen model  MLFM fails to model homophily  for directed graphs and, for correcting that, designed the GLFM model \cite{Li11}.~\\
-
-A preliminary version of this study was published in \cite{dulac-dsaa}. However, the definitions of preferential attachment and local degrees we proposed in this paper are not entirely satisfying inasmuch as the dynamic aspect of preferential attachment was not taken into account. The definitions we propose here and the developments concerning stochastic block models are new and we believe better founded than in this previous work.
-
-We study, in a theoretical way, how the non-parametric versions of the classical stochastic mixed membership models handle preferential attachment. For this purpose, we introduce formal definitions of this phenomenon and then study how the models behave with respect  to these definitions but, first,  we present these models and the settings in which we study their behavior.
-
 \input{content/concl}
 
-~\\
-
+~\\ % don't compile if commented ?!
 \bibliographystyle{chicago}
 \bibliography{./a}
 
